--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('./vendors/normalize.css'); 
+@import url('./blocks/page/page.css');
+@import url('./blocks/section/section.css');
+@import url('./blocks/section/_narrow/section_narrow.css');
+@import url('./blocks/header/header.css');
+@import url('./blocks/footer/footer.css');
+@import url('./blocks/elements/elements.css');
+@import url('./blocks/card/card.css');
+@import url('./blocks/profile/profile.css');
+@import url('./blocks/form/form.css');
+@import url('./blocks/modal/modal.css');
+@import url('./blocks/modal/_visible/modal_visible.css');
+@import url('./blocks/modal/_type/modal_type_imgPopup.css');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
